# RaspberryPiPhysicalProgramming

./: .gitignore  CMakeLists.txt  README.md
RFID/: CMakeLists.txt  main.c
RFID/include/: mfrc522.h
RFID/src/mfrc522/: mfrc522_debug.c
Thermistor/: CMakeLists.txt  CMakeLists.txt.in  README.md  main.cpp
